@@ -16,7 +16,7 @@ E A = !ps -A>/mnt/us/SotongDJ/pstemp &
 ;; start record, stop record, generate playlist, play record
 R R = !/mnt/us/SotongDJ/record.sh start &
 R N = !/mnt/us/SotongDJ/record.sh end &
-R G = !/mnt/us/SotongDJ/createlist.sh reclist &
+T G = !/mnt/us/python/bin/python2.6 /mnt/us/SotongDJ/gensl.py --reclist &
 R P = !/mnt/us/mplayer/control.sh playrec &
 ;;
 ;; Note
