@@ -1,8 +1,7 @@
 [Actions]
 
-## Launch the playlist, see mplayer/playlist
-;; M L = !/mnt/us/mplayer/control.sh playlists
-M L = !/mnt/us/mplayer/control.sh prepl
+## Launch the recent playlist
+M L = !/mnt/us/mplayer/control.sh recent
 
 ## Play everything in the music directory
 M A = !/mnt/us/mplayer/control.sh playall
@@ -16,11 +15,9 @@ M P = !/mnt/us/mplayer/control.sh prev
 M N = !/mnt/us/mplayer/control.sh next
 
 ;; Mplayer Custom Items
-P G = !/mnt/us/SotongDJ/createlist.sh playlist &
-;; M G = !/mnt/us/SotongDJ/createlist.sh playlists &
+P G = !/mnt/us/python/bin/python2.6 /mnt/us/SotongDJ/gensl.py --playlist &
 P P = !/mnt/us/mplayer/control.sh playlist
-;; P F = !/mnt/us/mplayer/control.sh fixyou
-T G = !/mnt/us/SotongDJ/createlist.sh strlist &
+T G = !/mnt/us/python/bin/python2.6 /mnt/us/SotongDJ/gensl.py --strlist &
 T P = !/mnt/us/mplayer/control.sh playstr
 ;; V U = !/mnt/us/mplayer/control.sh volup &
 ;; V D = !/mnt/us/mplayer/control.sh voldown &
